HPA/Custom/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: custom-hpa-ir
  namespace: custom-metrics
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`hpacustom.t.container-training.de`)
    kind: Rule
    services:
    - name: custom-hpa-manager-svc
      port: 5001

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ir
  namespace: monitoring
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`prometheus.t.container-training.de`)
    kind: Rule
    services:
    - name: prometheus-operated
      port: 9090
